[metadata]
name = codestare-async-utils
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/.git
description = "Utility modules for async development"
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = async
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio

